<resources>
    <string name="app_name">KBN Budin Chips</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Dashboard</string>
    <string name="title_stock">Stok</string>
    <string name="title_money">Keuangan</string>
    <string name="title_pemesanan">Pemesanan</string>
    <string name="title_chat">Chating</string>
    <string name="title_laporan">Laporan</string>

    <string-array name="array_satuan">
        <item>200</item>
        <item>500</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
