<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_beranda"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_stok"
        android:icon="@drawable/ic_stock"
        android:title="@string/title_stock" />
    <item
        android:id="@+id/nav_keuangan"
        android:icon="@drawable/ic_money"
        android:title="@string/title_money" />
    <item
        android:id="@+id/nav_pemesanan"
        android:icon="@drawable/ic_history"
        android:title="@string/title_pemesanan" />

    <item
        android:id="@+id/nav_laporan"
        android:icon="@drawable/ic_wallets"
        android:title="@string/title_laporan" />

</menu>
